--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
   <h3>Hello how are you</h3>
   <h4>Hello how are you</h4>
   <h5>Hello how are you</h5>
+
+  <img src="shiv.jpg" alt="shivam srivastava" height="300px">
 </body>
 </html>
