--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <h4>Hello how are you</h4>
   <h5>Hello how are you</h5>
 
-  <img src="shiv.jpg" alt="shivam srivastava" height="300px">
+  <img src="images/shiv.jpg" alt="shivam srivastava" height="300px">
+  <a href="https://www.youtube.com/watch?v=rklidcZ-aLU&t=1s">
+    youtube channel link
+  </a>
 </body>
 </html>
