--- a/index.html
+++ b/index.html
@@ -18,5 +18,9 @@
   <a href="https://www.youtube.com/watch?v=rklidcZ-aLU&t=1s">
     youtube channel link
   </a>
+  <pre>
+    hello    how are you, this iiiiiiis         
+    pre tag
+  </pre>
 </body>
 </html>
