--- a/index.html
+++ b/index.html
@@ -6,21 +6,12 @@
   <title>This is my first <title></title></title>
 </head>
 <body>
-  <h1>
-    Hello how are you
-  </h1>
-  <h2>Hello how are you</h2>
-  <h3>Hello how are you</h3>
-  <h4>Hello how are you</h4>
-  <h5>Hello how are you</h5>
-
-  <img src="images/shiv.jpg" alt="shivam srivastava" height="300px">
-  <a href="https://www.youtube.com/watch?v=rklidcZ-aLU&t=1s">
-    youtube channel link
-  </a>
-  <pre>
-    hello    how are you, this iiiiiiis         
-    pre tag
-  </pre>
+  
+  <ol>
+    <li>shi</li>
+    <li>shivam</li>
+    <li>shiv</li>
+    <li>s</li>
+  </ol>
 </body>
 </html>
