--- a/index.html
+++ b/index.html
@@ -7,11 +7,17 @@
 </head>
 <body>
   
-  <ol>
-    <li>shi</li>
-    <li>shivam</li>
-    <li>shiv</li>
-    <li>s</li>
-  </ol>
+<table border="2" >
+  <tr>
+    <th>name</th>
+    <th>height</th>
+    <th>weight</th>
+  </tr>
+  <tr>
+    <td>shivam</td>
+    <td>5'3</td>
+    <td>69</td>
+  </tr>
+</table>
 </body>
 </html>
