--- a/index.html
+++ b/index.html
@@ -19,5 +19,11 @@
     <td>69</td>
   </tr>
 </table>
+<br>
+<br>
+<form>
+  Email:<input type="text" placeholder="input text"><br>
+  Password:<input type="password"><br>
+</form>
 </body>
 </html>
